[package]
name = "pagerduty-rs"
version = "0.1.6"
authors = ["Archis Gore <me@archisgore.com>"]
edition = "2018"
license = "Apache-2.0"
categories = ["pagerduty", "alerting"]
keywords = ["pagerduty", "alerts", "events", "incidents", "monitoring"]
readme = "README.md"
repository = "https://github.com/archisgore/pagerduty-rs"

description = """PagerDuty API from Rust."""

[dependencies.reqwest]
version = ">=0.12.3"
default-features = false
features = ["json", "stream", "rustls-tls", "blocking"]

[dependencies]
url = "2.2.2"
time = {version = "0.3.5", features = ["std", "serde", "formatting", "macros"]}
serde = {version = "1.0.132", features = ["derive"]}

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "1.0.0"
rand = "0.8.4"
tokio = { version = "1.15.0", features = ["rt", "macros"] }
serde_json = "1.0.73"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true
